--- a/WindowExplorer/Sources/Views/ZoomControl/ZoomControl.xib
+++ b/WindowExplorer/Sources/Views/ZoomControl/ZoomControl.xib
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="14109" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14109"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14313.18"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -17,18 +16,18 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="c22-O7-iKe">
-            <rect key="frame" x="0.0" y="0.0" width="640" height="50"/>
+            <rect key="frame" x="0.0" y="0.0" width="640" height="56"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <slider verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="igJ-uQ-VVI">
-                    <rect key="frame" x="48" y="16" width="544" height="19"/>
+                    <rect key="frame" x="54" y="17" width="532" height="20"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="15" id="id2-5k-aMY"/>
+                        <constraint firstAttribute="height" constant="16" id="id2-5k-aMY"/>
                     </constraints>
                     <sliderCell key="cell" continuous="YES" refusesFirstResponder="YES" state="on" alignment="left" minValue="0.20000000000000001" maxValue="1" doubleValue="0.20000000000000001" tickMarkPosition="above" sliderType="linear" id="T5B-9i-06I" customClass="ColoredSliderCell" customModule="WindowExplorer" customModuleProvider="target"/>
                 </slider>
                 <button translatesAutoresizingMaskIntoConstraints="NO" id="rAl-eH-1Cr">
-                    <rect key="frame" x="8" y="8" width="34" height="34"/>
+                    <rect key="frame" x="8" y="8" width="40" height="40"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="rAl-eH-1Cr" secondAttribute="height" multiplier="1:1" id="HPa-wU-5PP"/>
                     </constraints>
@@ -38,7 +37,7 @@
                     </buttonCell>
                 </button>
                 <button translatesAutoresizingMaskIntoConstraints="NO" id="F4k-eL-tzC">
-                    <rect key="frame" x="598" y="8" width="34" height="34"/>
+                    <rect key="frame" x="592" y="8" width="40" height="40"/>
                     <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="more-icon" imagePosition="only" alignment="center" refusesFirstResponder="YES" imageScaling="proportionallyUpOrDown" inset="2" id="8nj-CJ-Amn">
                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                         <font key="font" metaFont="system"/>
@@ -55,13 +54,13 @@
                 <constraint firstAttribute="trailing" secondItem="F4k-eL-tzC" secondAttribute="trailing" constant="8" id="hei-Oa-mLI"/>
                 <constraint firstItem="rAl-eH-1Cr" firstAttribute="top" secondItem="c22-O7-iKe" secondAttribute="top" constant="8" id="umu-vt-WJb"/>
                 <constraint firstAttribute="bottom" secondItem="F4k-eL-tzC" secondAttribute="bottom" constant="8" id="wKZ-Hd-Z6B"/>
-                <constraint firstItem="igJ-uQ-VVI" firstAttribute="centerY" secondItem="c22-O7-iKe" secondAttribute="centerY" id="x5e-a8-KBY"/>
+                <constraint firstItem="igJ-uQ-VVI" firstAttribute="centerY" secondItem="c22-O7-iKe" secondAttribute="centerY" constant="1" id="x5e-a8-KBY"/>
                 <constraint firstItem="F4k-eL-tzC" firstAttribute="leading" secondItem="igJ-uQ-VVI" secondAttribute="trailing" constant="8" id="ztj-jz-bf4"/>
             </constraints>
         </customView>
     </objects>
     <resources>
-        <image name="less-icon" width="40" height="40"/>
-        <image name="more-icon" width="40" height="40"/>
+        <image name="less-icon" width="14" height="14"/>
+        <image name="more-icon" width="14" height="14"/>
     </resources>
 </document>
